# stengl-cswconfig

./: MANIFEST.in  README.rst  requirements.txt  setup.cfg  tox.ini
cswconfig/: __init__.py  convert.py  output.py
cswconfig/settings/: settings.ini
cswconfig/templates/: stengl_template.xml
