[metadata]
name = cswconfig
version = 0.1.0
description = STENGL cswconfig
author = Alessio Fabiani
author_email = alessio.fabiani@geo-solutions.it
url = https://github.com/geosolutions-it/stengl-cswconfig
download_url = https://github.com/geosolutions-it/stengl-cswconfig/tarball/master
keywords = csw, xml, template
classifiers =
	Development Status :: 3 - Alpha
	Environment :: Console
    Environment :: Web Environment
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Intended Audience :: System Administrators
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
    Topic :: Software Development
    Topic :: Office/Business
	Topic :: Internet :: WWW/HTTP

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    httplib2 >= 0.7.4
    regex <= 2016.7.21
    requests == 2.18.4
    simplejson <= 3.13.2
    pyproj >=1.9.5,<=1.9.5.1
    OWSLib == 0.16.0
    Shapely == 1.5.17
    Jinja2 == 2.10
    awesome-slugify == 1.6.5
    python-dateutil == 2.7.3
    pytz == 2018.3

[options.packages.find]
exclude = tests

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
exclude=cswconfig/*/migrations/*,management,scripts,docs,static,migrations,cswconfig/*settings.py
ignore=E121,E122,E124,E126,E226
